outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval-6617565911852658265_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance dynamically increasing as unvisited nodes decrease (weight = 0.3 / (1 + remaining_nodes)), and penalizes nodes far from the destination (30% of remaining weight) to encourage direct path optimization, balancing long-term and short-term path optimization.}
                                                                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance dynamically increasing as unvisited nodes decrease (weight = 0.3 / (1 + remaining_nodes)), and penalizes nodes far from the destination (30% of remaining weight) to encourage direct path optimization, balancing long-term and short-term path optimization.}
                                                                                                                                                                                                                                                                             ^
SyntaxError: unmatched '}'
